feat: Enhance test reporting and fix console errors
- Add HTML test report generation using ReportGenerator.

- Fix various compilation errors and warnings in the console application.

- Add the Type property back to the Bot entity.

- Improve error handling and resilience in the console application.

--- a/tests/BotManagementSystem.Tests/BotManagementSystem.Tests.csproj
+++ b/tests/BotManagementSystem.Tests/BotManagementSystem.Tests.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
+    <PackageReference Include="XunitXml.TestLogger" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
