--- a/src/BotManagementSystem.Console/appsettings.json
+++ b/src/BotManagementSystem.Console/appsettings.json
@@ -1,7 +1,12 @@
 {
   "OpenAI": {
     "ApiKey": "your-openai-api-key-here",
-    "ModelId": "gpt-3.5-turbo"
+    "ModelId": "gpt-3.5-turbo",
+    "PromptExecutionSettings": {
+      "MaxTokens": 2000,
+      "Temperature": 0.7,
+      "TopP": 0.8
+    }
   },
   "Logging": {
     "LogLevel": {
